--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
             </ul>
 
             <p class="text-gray-300 mt-4">API 使用示例:</p>
-            <pre class="bg-gray-800 p-4 rounded-lg text-sm text-gray-300">
+            <pre class="bg-gray-800 p-4 rounded-lg text-sm text-gray-300 overflow-x-scroll">
 curl -X POST -H "Content-Type: application/json" -d '{"latitude": 31.2304, "longitude": 121.4737}' https://sevenyan/api/hanzi/
 curl -X POST -H "Content-Type: application/json" -d '{"hanzi_string": "钒氮钠镎铊铥钋"}' https://sevenyan/api/coordinates/
             </pre>
