--- a/templates/index.html
+++ b/templates/index.html
@@ -85,13 +85,7 @@
                 <li><strong>七言地址转经纬度:</strong> POST /api/coordinates/</li>
             </ul>
 
-            <p class="text-gray-300 mt-4">API 使用示例:</p>
-            <pre class="bg-gray-800 p-4 rounded-lg text-sm text-gray-300 overflow-x-scroll">
-curl -X POST -H "Content-Type: application/json" -d '{"latitude": 31.2304, "longitude": 121.4737}' https://sevenyan/api/hanzi/
-curl -X POST -H "Content-Type: application/json" -d '{"hanzi_string": "钒氮钠镎铊铥钋"}' https://sevenyan/api/coordinates/
-            </pre>
-
-            请参考：https://github.com/gaogelucas/SevenYanAddress
+            <p class="text-gray-300 mt-4">API 使用示例请参考：https://github.com/gaogelucas/SevenYanAddress</p>
 
         </div>
     </div>
